# Engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
.github/workflows/: c-cpp.yml  cmake-ci.yml
src/: engine.cpp  engine.hpp  main.cpp
src/Common/: CommonHeaders.h  PrimitiveTypes.h
src/button/: button.hpp
src/engine/: engine.cpp  engine.hpp
